Last Project Update

--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+    
     <img src="./assets/logo.png" alt="Gerador de senha Logo" class="logo">
 
     <main class="container-input">
-        <span>Tamanho <span id="valor"></span>caracteres</span>
+        <span>Tamanho <span id="valor"></span> caracteres</span>
         <input type="range" id="slider" class="slider" min="5" max="25" value="8" />
-        <button class="button-cta" id="button">Gerar senha</button>
+
+        <button id="button" class="button-cta" onclick="generatePassword()">Gerar senha</button>
     </main>
-    <div class="container-password ide" id="container-password">
+
+    <div id="container-password" class="container-password hide">
         <span class="title">Sua senha gerada foi:</span>
-        <span class="password" id="password">123123123123</span>
+        <span id="password" class="password"></span>
         <span class="tooltip">Clique na senha para copiar.</span>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
