--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 <label for="symbols">Símbolos</label>
             </div>
 
-            <button id="button" class="button-cta" onclick="generatePassword()">Gerar
-                senha</button>
+            <button id="button" class="button-cta" onclick="generatePassword()">Gerar senha</button>
         </main>
 
         <div id="container-password" class="container-password hide">
